# baleen

./: .gitignore  CLEANROOM.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deep-verify.yml
docs/: ARC-0-M5-LIFECYCLE.md  ARC-1-M5-SCHEDULER.md  ARC-2-M5-CONCURRENT-ISOLATION.md  ARC-3-M5-VIRTIO-CONSOLE.md  ARC-4-M5-VIRTIO-BLK-COW.md  ARC-4-TRAP-AND-SERVICE.md  ARC-5-M5-GUEST-INTERFACE.md  ARC-6-M5-THESIS.md  ARC4-CONCURRENCY-PREDICATE.md  ARC5-CONTENT-NON-INHERITANCE.md  ARC6A-SPAN-REFINEMENT.md  ARC6B-LINUX-ON-THE-PROVEN-EMITTER.md  AUDIT-1-HAL-FENCE.md  AUDIT-2-P2M-STAGE2.md  AUDIT-3-NON-INTERFERENCE.md  AUDIT-4-CONCURRENT-STAGE2.md  AUDIT-5-VIRTQUEUE-GRANT.md  AUDIT-6-VIRTIO-BLK-COW.md  AUDIT-7-INTERRUPT-SURFACE.md  QEMU-AND-METAL.md  ROADMAP.md  STAGE2-REFINEMENT-FORALL-N.md  TIER-B-CUTOFF.md  TIER-C-SPIKE.md  TIER-D-NONINTERFERENCE.md
hv-core/: Cargo.toml
hv-core/src/: evtchn.rs  grant.rs  hypervisor.rs  lib.rs  p2m.rs  policy.rs  prng.rs  sched.rs
hv-fuzz/: Cargo.toml  README.md
hv-fuzz/fuzz_targets/: decode.rs  evtchn.rs  grant.rs  hypervisor.rs  p2m.rs  policy.rs  sched.rs
hv-hal/: Cargo.toml
hv-hal/src/: lib.rs
hv-metal/: Cargo.toml  README.md  boot-test.sh  build.rs  linker.ld
hv-metal/.cargo/: config.toml
hv-metal/linux/: guest.dts
hv-metal/src/: blk.rs  cell.rs  el2.rs  exceptions.rs  gic.rs  guest.rs  heap.rs  linux.rs  main.rs  pl011.rs  stage2.rs  teardown.rs  time.rs  virtio.rs
hv-s2/: Cargo.toml
hv-s2/src/: arm64.rs  check.rs  leafmap.rs  lib.rs
hv-sim/: Cargo.toml
hv-sim/examples/: ni_probe.rs  saturation_probe.rs
hv-sim/src/: enumerate.rs  lib.rs  noninterference.rs  scenario.rs
hv-verify/: Cargo.toml  build.rs
hv-verify/src/: lib.rs
hv-verify/verus/: README.md  control_forest_acyclic.rs  foreign_link_preservation.rs  frame_lemma.rs  noninterference_theorem.rs  read_closure.rs  refcount_mismatch.rs  stage2_leaf_authorized.rs  step_consistency.rs  unwinding_control.rs  unwinding_create.rs  unwinding_destroy.rs  unwinding_signal.rs
xtask/: Cargo.toml
xtask/src/: main.rs
