# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright (c) 2026 Via Balaena

[workspace]
resolver = "2"
members = ["hv-hal", "hv-core", "hv-sim", "xtask"]
# hv-fuzz is a standalone crate (its own workspace) excluded here so stable
# `cargo test --workspace` never builds the nightly/libFuzzer machinery.
exclude = ["hv-fuzz"]
# hv-metal (bare-metal binary, M3) joins the workspace when it arrives; it needs a
# custom target and would break `cargo test --workspace`, so it stays out until
# there is a tested brain to plug in.

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = ["Via Balaena"]
repository = "https://github.com/via-balaena/baleen"
rust-version = "1.96"

[workspace.lints.rust]
# The fence, enforced by the compiler: no crate in this workspace may write unsafe.
# When hv-metal joins, it — and only it — overrides this in its own manifest.
unsafe_code = "forbid"
