# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright (c) 2026 Via Balaena

[package]
name = "hv-fuzz"
description = "cargo-fuzz targets against hv-core's pure seams (the hypercall dispatcher first)."
version = "0.0.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = ["Via Balaena"]
publish = false

# Standalone: its own (empty) workspace so the parent's stable `cargo test` never
# tries to build the nightly/libFuzzer machinery. The parent also excludes this dir.
[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
hv-core = { path = "../hv-core" }

[[bin]]
name = "decode"
path = "fuzz_targets/decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "evtchn"
path = "fuzz_targets/evtchn.rs"
test = false
doc = false
bench = false

[[bin]]
name = "grant"
path = "fuzz_targets/grant.rs"
test = false
doc = false
bench = false
