# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright (c) 2026 Via Balaena

[package]
name = "hv-fuzz"
description = "cargo-fuzz targets against hv-core's pure seams (the hypercall dispatcher first)."
version = "0.0.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = ["Via Balaena"]
publish = false

# Standalone: its own (empty) workspace so the parent's stable `cargo test` never
# tries to build the nightly/libFuzzer machinery. The parent also excludes this dir.
[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
hv-core = { path = "../hv-core" }
# The Stage-2 emission + its refinement properties: the integrated target checks them after every
# dispatch, alongside hv-core's own invariants.
hv-s2 = { path = "../hv-s2" }

[[bin]]
name = "decode"
path = "fuzz_targets/decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "evtchn"
path = "fuzz_targets/evtchn.rs"
test = false
doc = false
bench = false

[[bin]]
name = "grant"
path = "fuzz_targets/grant.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sched"
path = "fuzz_targets/sched.rs"
test = false
doc = false
bench = false

[[bin]]
name = "policy"
path = "fuzz_targets/policy.rs"
test = false
doc = false
bench = false

[[bin]]
name = "hypervisor"
path = "fuzz_targets/hypervisor.rs"
test = false
doc = false
bench = false

[[bin]]
name = "p2m"
path = "fuzz_targets/p2m.rs"
test = false
doc = false
bench = false
