# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright (c) 2026 Via Balaena

[package]
name = "hv-hal"
description = "Hardware abstraction traits for the Baleen hypervisor (no_std)."
# Internal workspace crate — not for crates.io. Guards against an accidental publish.
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true
