# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright (c) 2026 Via Balaena

[package]
name = "hv-metal"
description = "Bare-metal binary: boot, enter EL2, the thin fenced `unsafe` core. The southbound metal layer beneath the proven `hv-core` brain."
version = "0.0.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = ["Via Balaena"]
publish = false

[features]
# `selftest` turns the boot into a self-checking run: it asserts the synthetic `HvCall` dispatched
# into `hv-core` produced the exact expected accounting witness (Arc 3), then deliberately executes
# `BRK #0` so the installed exception vectors catch + decode a real fault (Arc 2 — the boot-test
# asserts the decode). Off by default: the normal boot runs the Arc-3 sequence and parks. Each
# self-test asserts a witness produced *by* the mechanism under test (design-lesson #24(f)). See
# `src/exceptions.rs` and `rust_main`.
selftest = []

# The proven brain and the fence it speaks to, linked across the workspace boundary as path deps
# (both are members of the parent workspace; hv-metal is its own excluded workspace). They build
# under their own manifests — i.e. still `unsafe_code = "forbid"`, still proven — so linking them
# here does not pierce the fence. hv-metal supplies the `#[global_allocator]` (see `src/heap.rs`)
# that `hv-core`'s `alloc` use needs on the metal.
[dependencies]
hv-core = { path = "../hv-core" }
hv-hal = { path = "../hv-hal" }

# Standalone: its own workspace so the parent's stable `cargo test --workspace` never tries to
# build this bare-metal binary (it targets `aarch64-unknown-none-softfloat` and would fail on the
# host). The parent `Cargo.toml` also lists this dir under `exclude`. Mirrors how `hv-fuzz` is kept
# out of the stable build.
[workspace]

# This is the ONE crate that overrides the workspace-wide `unsafe_code = "forbid"` fence. The metal
# layer IS the thin fenced `unsafe` core — MMIO, system registers, page tables. Everything above it
# (`hv-core`) stays `unsafe`-free and proven; every `unsafe` block here is justified against the
# `hv-hal` fence the proofs assume (see Architecture Audit #1 in `docs/ROADMAP.md`).
[lints.rust]
unsafe_code = "allow"

# Bare-metal: no unwinding.
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
