# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright (c) 2026 Via Balaena

[package]
name = "hv-sim"
description = "Host harness: fake memory, a hand-cranked clock, and deterministic seeded simulation of hv-core."
# Internal workspace crate — not for crates.io. Guards against an accidental publish.
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
hv-hal = { path = "../hv-hal" }
hv-core = { path = "../hv-core" }
# The Stage-2 emission + its refinement properties: the enumerator checks them at every reachable
# state, alongside hv-core's own invariants (see `enumerate`).
hv-s2 = { path = "../hv-s2" }

[lints]
workspace = true
