# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright (c) 2026 Via Balaena

[package]
name = "xtask"
description = "Build/test automation for Baleen. Run as `cargo xtask <task>`."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true
